# linear-optimization-ai

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: app.py
src/llm_optimizer/: app.py
src/llm_optimizer/calculations/: lin_optimization_logic.py
src/llm_optimizer/llm/: communication.py  communication_instructor.py
src/llm_optimizer/models/: base.py  llm.py
src/llm_optimizer/utils/: helpers.py
tests/: conftest.py  mock_llm_response.json  mock_llm_response_complex.json  test_app.py  test_app_integration.py  test_communication_instructor.py  test_lin_optimization_logic.py  test_utils.py
