[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-optimizer"
version = "1.0.0"
dependencies = [
    "streamlit",
    "pyomo",
    "pydantic",
    "highspy",
    "instructor>=1.4.0",
    "pydantic-settings"
]

[project.optional-dependencies]
dev = [
    "pytest",
]